mobile overflow fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -190,6 +190,11 @@ code {
 	Nav {
 		backdrop-filter: blur(80px);
 	}
+	#home-projects a:nth-child(1),
+	#home-projects a:nth-child(2),
+	#home-projects a:nth-child(3) {
+		border-right: 0;
+	}
 	.footer-grid {
 		grid-template-areas:
 			"bbc cnn"
